--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"lodash": "^4.17.4",
 		"react": "15.4.1",
-		"react-native": "0.39.2"
+		"react-native": "0.39.2",
+		"react-native-dotenv": "^0.0.2"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
