--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lodash": "^4.17.4",
 		"react": "15.4.1",
 		"react-native": "0.39.2",
-		"react-native-dotenv": "^0.0.2"
+		"react-native-dotenv": "^0.0.2",
+		"react-native-drawer": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
