generalize routing a bit
and add navigator to context to make it easy for components to set up
behavior that causes navigation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"setupFiles": "./config/jest/mockFetch.js"
 	},
 	"standard": {
+    "parser": "babel-eslint",
 		"global": [
 			"fetch",
 			"it"
