--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
-		"react": "15.4.1",
-		"react-native": "0.39.2",
+		"react": "^15.4.1",
+		"react-native": "^0.41",
 		"react-native-dotenv": "^0.0.2",
 		"react-native-drawer": "^2.3.0"
 	},
