--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"react": "^15.4.1",
 		"react-native": "0.41.2",
 		"react-native-dotenv": "^0.0.2",
-		"react-native-drawer": "^2.3.0"
+		"react-native-drawer": "^2.3.0",
+		"react-native-tab-navigator": "^0.3.3"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
@@ -24,7 +25,7 @@
 		"setupFiles": "./config/jest/mockFetch.js"
 	},
 	"standard": {
-    "parser": "babel-eslint",
+		"parser": "babel-eslint",
 		"global": [
 			"fetch",
 			"it"
