--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
 		"react-native": "0.42.0",
 		"react-native-dotenv": "^0.0.2",
 		"react-native-drawer": "^2.3.0",
-		"react-native-tab-navigator": "^0.3.3"
+		"react-native-tab-navigator": "^0.3.3",
+		"react-redux": "^5.0.3",
+		"redux": "^3.6.0",
+		"redux-logger": "^2.8.2",
+		"redux-promise": "^0.5.3"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
@@ -27,6 +31,7 @@
 	"standard": {
 		"parser": "babel-eslint",
 		"global": [
+			"__DEV__",
 			"fetch",
 			"it"
 		]
