--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
 		"redux-promise": "^0.5.3"
 	},
 	"devDependencies": {
-		"babel-jest": "18.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.0.0",
-		"react-test-renderer": "15.4.1"
+		"babel-preset-react-native": "^1.9.1",
+		"jest": "^19.0.2",
+		"react-test-renderer": "^15.4.2"
 	},
 	"jest": {
 		"preset": "react-native",
-		"setupFiles": "./config/jest/mockFetch.js"
+		"setupFiles": [
+			"<rootDir>/config/jest/mockFetch.js"
+		]
 	},
 	"standard": {
 		"parser": "babel-eslint",
