--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
 		"jest": "^19.0.2",
 		"react-test-renderer": "^15.4.2"
 	},
+  "babel": {
+    "presets": [
+      "react-native",
+      "react-native-dotenv"
+    ]
+  },
 	"jest": {
 		"preset": "react-native",
 		"setupFiles": [
