--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,11 +126,16 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-fbsdk')
-    compile project(':react-native-device-info')
+    compile project(':react-native-google-signin')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-fbsdk')
+    compile project(':react-native-device-info')
+    compile "com.facebook.react:react-native:+"
+    compile(project(":react-native-google-signin")){
+        exclude group: "com.google.android.gms"
+    }
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -139,3 +144,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: "com.google.gms.google-services"
