finish ios and change app config files

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,7 @@
 target 'HyloReactNative' do
   use_frameworks!
 
+  pod 'Google/SignIn'
   pod 'FBSDKCoreKit'
   pod 'FBSDKShareKit'
   pod 'FBSDKLoginKit'
