--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,14 +123,18 @@ android {
             }
         }
     }
+    aaptOptions {
+        cruncherEnabled = false
+    }
 }
-
 dependencies {
     compile project(':react-native-fbsdk')
     compile project(':react-native-device-info')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.facebook.react:react-native:+"
+    // compile 'com.facebook.android:facebook-android-sdk:[4.+)'
+    compile 'com.facebook.android:facebook-android-sdk:[4.22.1)' 
 }
 
 // Run this once to be able to run the application with BUCK
