--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-device-info": "^0.10.2",
     "react-native-dotenv": "^0.0.4",
     "react-native-drawer": "^2.3.0",
