--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "babel-preset-react-native": "^1.9.2",
     "jest": "^20.0.4",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "16.0.0-alpha.12",
     "remote-redux-devtools": "^0.5.11"
   },
   "babel": {
