--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"
     // compile 'com.facebook.android:facebook-android-sdk:[4.+)'
-    compile 'com.facebook.android:facebook-android-sdk:[4.22.1)' 
+    compile 'com.facebook.android:facebook-android-sdk:[4.22.1)'
+    compile project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
