--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-drawer": "^2.3.0",
     "react-native-fbsdk": "^0.6.0",
     "react-native-tab-navigator": "^0.3.3",
+    "react-native-vector-icons": "^4.2.0",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
