--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,6 +128,7 @@ android {
     }
 }
 dependencies {
+    compile project(':react-native-google-signin')
     compile fileTree(dir: "libs", include: ["*.jar"])
 
     compile project(':react-native-fbsdk')
