--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@
 target 'HyloReactNative' do
   use_frameworks!
 
-  pod 'Google/SignIn'
+  pod 'GoogleSignIn'
   pod 'FBSDKCoreKit'
   pod 'FBSDKShareKit'
   pod 'FBSDKLoginKit'
