--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-google-signin": "^0.10.0",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
+    "react-native-webview-bridge-updated": "^1.0.8",
+    "react-native-zss-rich-text-editor": "^1.0.2",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
