--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-google-signin": "^0.10.0",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
