Share debug.keystore for project

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ android/app/libs
 .env.development
 .env.production
 coverage/
+
+# Allow debug.keystore but not release
+!android/app/debug.keystore
