--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,7 +104,18 @@ android {
             include "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        debug {
+            storeFile file(HYLO_DEBUG_STORE_FILE)
+            storePassword HYLO_DEBUG_STORE_PASSWORD
+            keyAlias HYLO_DEBUG_KEY_ALIAS
+            keyPassword HYLO_DEBUG_KEY_PASSWORD
+        }
+    }
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
