--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ dependencies {
         exclude group: "com.google.android.gms"
     }
     compile project(':react-native-vector-icons')
+    compile project(':react-native-webview-bridge')
 
     compile "com.android.support:appcompat-v7:23.0.1"
     compile 'com.google.android.gms:play-services-auth:10.2.0'
@@ -163,3 +164,8 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply plugin: "com.google.gms.google-services"
+
+project.afterEvaluate {
+    apply from: '../../node_modules/react-native-zss-rich-text-editor/htmlCopy.gradle';
+    copyEditorHtmlToAppAssets(file('../../node_modules/react-native-zss-rich-text-editor'))
+}
