--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#model-createClass-dist",
     "redux-promise": "^0.5.3",
+    "tinycolor2": "^1.4.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
