--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^0.0.4",
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
+    "react-native-mock": "^0.3.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
     "react-native-webview-bridge-updated": "^1.0.8",
@@ -52,7 +53,8 @@
   "jest": {
     "preset": "react-native",
     "setupFiles": [
-      "<rootDir>/config/jest/mockFetch.js"
+      "<rootDir>/config/jest/mockFetch.js",
+      "<rootDir>/config/jest/reactNativeMock.js"
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
