--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "ent": "^2.2.0",
     "faker": "^4.1.0",
-    "hylo-utils": "Hylozoic/hylo-utils#0a97452a1",
+    "hylo-utils": "Hylozoic/hylo-utils#0a1a89c5",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
     "prop-types": "^15.5.10",
@@ -29,7 +29,7 @@
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
     "react-native-webview-bridge-updated": "^1.0.8",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor",
+    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#b8ebfe96",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
