--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "jest": {
     "preset": "react-native",
     "setupFiles": [
-      "<rootDir>/config/jest/mockFetch.js"
+      "<rootDir>/config/jest/mockFetch.js",
+      "<rootDir>/config/jest/mockError.js"
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
