--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "babel-preset-react-native": "^1.9.2",
     "jest": "^20.0.4",
     "react-test-renderer": "16.0.0-alpha.12",
-    "remote-redux-devtools": "^0.5.11"
+    "remote-redux-devtools": "^0.5.11",
+    "validator": "^8.0.0"
   },
   "babel": {
     "presets": [
