bring in SocketListener from hylo-evo
with some tweaks to make cookie auth work correctly

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#model-createClass-dist",
     "redux-promise": "^0.5.3",
+    "sails.io.js": "1.1.10",
+    "socket.io-client": "^2.0.3",
     "striptags": "~2",
     "tinycolor2": "^1.4.1",
     "url": "^0.11.0"
