--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -39,6 +39,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>org.hylo.HyloReactNative</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>org.hylo.HyloReactNative</string>
@@ -51,6 +53,8 @@
 	<string>186895474801147</string>
 	<key>FacebookDisplayName</key>
 	<string>Hylo Dev</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -114,7 +118,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>ITSAppUsesNonExemptEncryption</key>
-  <false/>
 </dict>
 </plist>
