--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.11.1",
+    "react-native-image-picker": "^0.26.3",
     "react-native-mock": "^0.3.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
