--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-native-aws3": "^0.0.8",
     "react-native-dotenv": "^0.0.4",
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
