--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-inline-dotenv": "^1.1.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -21,7 +23,6 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.4",
-    "react-native-dotenv": "^0.1.0",
     "react-native-aws3": "^0.0.8",
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
@@ -54,8 +55,11 @@
   },
   "babel": {
     "presets": [
-      "react-native",
-      "react-native-dotenv"
+      "react-native"
+    ],
+    "plugins": [
+      "inline-dotenv",
+      "transform-inline-environment-variables"
     ],
     "env": {
       "test": {
