--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "babel-plugin-remove-style": "^0.1.0",
     "babel-preset-react-native": "^1.9.2",
     "jest": "^20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12",
+    "react-test-renderer": "next",
     "remote-redux-devtools": "^0.5.11",
     "validator": "^8.0.0"
   },
@@ -59,7 +59,8 @@
     ],
     "plugins": [
       [
-        "inline-dotenv", {
+        "inline-dotenv",
+        {
           "silent": true
         }
       ],
