--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -25,7 +25,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb186895474801147</string>
+				<string>fb${FACEBOOK_APP_ID}</string>
 			</array>
 		</dict>
 		<dict>
@@ -60,9 +60,9 @@
 	<key>CFBundleVersion</key>
 	<string>10</string>
 	<key>FacebookAppID</key>
-	<string>186895474801147</string>
+	<string>${FACEBOOK_APP_ID}</string>
 	<key>FacebookDisplayName</key>
-	<string>Hylo Dev</string>
+	<string>Hylo</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
@@ -77,7 +77,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-      <true/>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>127.0.0.1</key>
