--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-onesignal')
     compile fileTree(dir: "libs", include: ["*.jar"])
 
     compile project(':react-native-fbsdk')
