--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.11.1",
     "react-native-image-picker": "^0.26.3",
+    "react-native-onesignal": "^3.0.5",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
     "react-native-webview-bridge-updated": "^1.0.8",
