add a test for LoggedInRoot

--- a/package.json
+++ b/package.json
@@ -87,7 +87,10 @@
       "json",
       "lcov"
     ],
-    "timers": "fake"
+    "timers": "fake",
+    "transformIgnorePatterns": [
+      "/!node_modules\\/react-navigation"
+    ]
   },
   "standard": {
     "parser": "babel-eslint",
