MBL-49 use react-native-background-timer

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-background-timer')
     compile project(':react-native-onesignal')
     compile fileTree(dir: "libs", include: ["*.jar"])
 
