--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,21 +154,30 @@ android {
 
 dependencies {
     compile project(':react-native-background-timer')
-    compile project(':react-native-onesignal')
+    compile project(':react-native-fbsdk')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-webview-bridge')
+    compile project(':react-native-image-picker')
+
+    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.facebook.react:react-native:+"
+    compile 'com.facebook.android:facebook-android-sdk:[4.22.1)'
     compile fileTree(dir: "libs", include: ["*.jar"])
 
-    compile project(':react-native-fbsdk')
+    // we exclude com.google.android.gms from these two in order to avoid
+    // dependency version conflicts
+    compile(project(':react-native-onesignal')){
+        exclude group: "com.google.android.gms"
+    }
     compile(project(":react-native-google-signin")){
         exclude group: "com.google.android.gms"
     }
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-webview-bridge')
 
-    compile "com.android.support:appcompat-v7:23.0.1"
+    // then we re-require the libraries that are needed, but with a precise
+    // version requirement
     compile 'com.google.android.gms:play-services-auth:10.2.1'
-    compile "com.facebook.react:react-native:+"
-    compile 'com.facebook.android:facebook-android-sdk:[4.22.1)'
-    compile project(':react-native-image-picker')
+    compile 'com.google.android.gms:play-services-gcm:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
 }
 
 // Run this once to be able to run the application with BUCK
