--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "socket.io-client": "^2.0.3",
     "striptags": "~2",
     "tinycolor2": "^1.4.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "url-parse": "^1.1.9"
   },
   "devDependencies": {
     "babel-plugin-remove-style": "^0.1.0",
