--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,6 +157,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-linear-gradient')
     compile project(':react-native-background-timer')
     compile project(':react-native-fbsdk')
     compile project(':react-native-vector-icons')
