--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.3",
+    "react-native-linear-gradient": "^2.3.0",
     "react-native-onesignal": "^3.0.5",
     "react-native-prompt": "^1.0.0",
     "react-native-tab-navigator": "^0.3.3",
