un-hardcode Facebook app id for Android builds

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ build/
 .gradle
 local.properties
 *.iml
+android/app/src/debug/res/values/strings.xml
+android/app/src/release/res/values/strings.xml
 
 # node.js
 #
