--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,16 +25,25 @@
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize">>
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <data android:scheme="http" android:host="hylo.com" />
+            <data android:scheme="https" android:host="hylo.com" />
+            <data android:scheme="http" android:host="www.hylo.com" />
+            <data android:scheme="https" android:host="www.hylo.com" />
         </intent-filter>
         <intent-filter>
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="@string/link_schema" />
+            <data android:scheme="http" android:host="hylo.com" />
+            <data android:scheme="https" android:host="hylo.com" />
+            <data android:scheme="http" android:host="www.hylo.com" />
+            <data android:scheme="https" android:host="www.hylo.com" />
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
