--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-linear-gradient": "^2.3.0",
     "react-native-onesignal": "^3.0.5",
     "react-native-prompt": "^1.0.0",
+    "react-native-prompt-android": "^0.3.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^4.2.0",
