--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "^0.46.4",
     "react-native-aws3": "^0.0.8",
     "react-native-background-timer": "^1.2.0",
+    "react-native-device-info": "^0.11.0",
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.12.0",
