--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "react-native run-android",
     "android:device": "adb reverse tcp:3001 tcp:3001 && react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest"
+    "test": "jest",
+    "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
     "babel-eslint": "^8.0.1",
