--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-eslint": "^8.0.1",
     "babel-plugin-inline-dotenv": "^1.1.1",
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -80,6 +81,9 @@
         "plugins": [
           "remove-style"
         ]
+      },
+      "production": {
+        "plugins": ["transform-remove-console"]
       }
     }
   },
