--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hyloreactnative"
+    package="com.hylo.hyloandroid"
     android:versionCode="1"
     android:versionName="2.0">
 
